# job-pilot

./: .env.example  .gitignore  Makefile  Readme.md  pyproject.toml
notebooks/: adw.ipynb  job-pilot.ipynb  jobpilot-workflow.html
src/: find.py  main.py
src/apply/: main.py
src/find/: main.py  payloads.py  response_formatter.py
src/models/: __init__.py  job.py  profile.py  roles.py
src/setup/: __init__.py  main.py  parser.py  reader.py
